--- a/capstone.ipynb
+++ b/capstone.ipynb
@@ -3233,7 +3233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusions and Next-Steps\n",
+    "## Conclusions and Next-Steps\n",
     "The most model to optimize for accuracy in detecting fake news and absurd news uses CountVectorizer and MultinomialDB. The optimal parameters for this model are where ngram_range = (1,3) and alpha = 0.36.\n",
     "\n",
     "Accuracy: 89.72%\n",
